Prepare undo/redo

--- a/test/index.html
+++ b/test/index.html
@@ -69,6 +69,7 @@
           }
           eruda.show().get().config.set('displaySize', 50)
         }, 1000)
+        setTimeout(function () {console.log('hola')}, 2000)
       })()
     </script>
   </body>
